--- a/pages/404.md
+++ b/pages/404.md
@@ -7,8 +7,11 @@ comments: false
 permalink: /404.html
 ---
 
+`
+
+```html
+<img style="height:192px;width:192px;border:1px solid lightgrey;" src="{{ site.url }}/assets/images/404.jpg" alt="404" />`
+```
 
 
 
-
-![404](E:\blog\myxinyue.github.io\images\blog\404.jpg)
