--- a/pages/404.md
+++ b/pages/404.md
@@ -4,14 +4,10 @@ title: 页面没有找到
 description: 你来到了一片荒芜之地
 keywords: 404
 comments: false
-permalink: /404.html
+permalink: /404.htm
 ---
 
-`
-
-```html
-<img style="height:192px;width:192px;border:1px solid lightgrey;" src="{{ site.url }}/assets/images/404.jpg" alt="404" />`
-```
 
 
+<img style="height:192px;width:192px;border:1px solid lightgrey;" src="{{ site.url }}/assets/images/404.jpg" alt="404" />
 
