--- a/pages/404.md
+++ b/pages/404.md
@@ -9,5 +9,5 @@ permalink: /404.htm
 
 
 
-<img style="height:192px;width:192px;border:1px solid lightgrey;" src="{{ site.url }}/assets/images/404.jpg" alt="404" />
+<img style="height:192px;width:192px;border:1px solid lightgrey;" src="{{assets_base_url}}/assets/images/404.jpg" alt="404" />
 
