--- a/pages/404.md
+++ b/pages/404.md
@@ -4,10 +4,24 @@ title: 页面没有找到
 description: 你来到了一片荒芜之地
 keywords: 404
 comments: false
-permalink: /404.htm
+permalink: /404/
 ---
 
+页面不存在
 
+<img style="width:50%;border:1px solid lightgrey;" src="{{ assets_base_url }}/assets/images/404.jpg" alt="wechat receipt code" />
 
-<img style="height:192px;width:192px;border:1px solid lightgrey;" src="{{assets_base_url}}/assets/images/404.jpg" alt="404" />
+  <style>
+    pre {
+          background: none;
+          border: none;
+    }
+  </style>
 
+  <pre>         
+---x-----mm--
+      /^(  )^\
+      \,(..),/        Oops...
+        V~~V                     
+一定是发生了什么可怕的事情....
+    </pre>
